java 11 to 18, lists changed to immutable lists