@@ -44,7 +44,7 @@ public class UserServiceImpl implements UserService {
         List<User> users = userRepository.findAllByCompanyId(loggedInUser.getCompany().getId());
         return users.stream()
                 .filter(user -> !user.getId().equals(loggedInUser.getId()))
-                .map(user -> mapperUtil.convert(user, new UserDTO())).collect(Collectors.toList());
+                .map(user -> mapperUtil.convert(user, new UserDTO())).toList();
     }
 
     @Override
